# statsvg_rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: render.yml
src/: error.rs  github.rs  main.rs  params.rs  svg.rs  theme.rs
