[package]
name = "statsvg-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "statsvg-rs"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
dotenvy = "0.15"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures = "0.3"